--- a/BootGridApp/templates/BootGridApp/index.html
+++ b/BootGridApp/templates/BootGridApp/index.html
@@ -1,9 +1,9 @@
 {% extends 'BootGridApp/base.html' %}
 
 {% block content %}
-<div>
+<div style="background: blue">
 <header>
-    <h1>Page <span>One</span></h1>
+    <h1><small>Page</small> <span>One</span></h1>
 </header>
 
 <section>
@@ -13,7 +13,7 @@
 </section>
 <!--each page uses same layout just different content-->
     <nav>
-<button><a href="{% url 'pageTwo' %}">Next</a></button>
+        <a href="{% url 'pageTwo' %}"><button>Next</button></a>
     </nav>
 </div>
 {% endblock content %}
